# DGscRNA

./: .gitignore  IMPLEMENTATION_SUMMARY.md  PUBLISHING_GUIDE.md  README.md  complete_example.py  example_workflow.ipynb  pyproject.toml  requirements.txt  setup.py  test_deg_scoring.py
.github/workflows/: ci.yml  python-publish.yml
data/: CellMarker_AllTissues.csv  CellMarker_Blood.csv  CellMarker_Epithelium.csv  CellMarker_Lymph node.csv  CellMarker_Lymph.csv  CellMarker_Lymphoid tissue.csv  CellMarker_Thymus.csv  CellMarker_Thyroid.csv  HPA_CTEN_EPL.csv  HPA_CTEN_ETL.csv  HPA_CTER_EPL.csv  HPA_CTER_ETL.csv  HPA_CTER_NE.csv  HPA_GE_EPL.csv  HPA_GE_ETL.csv  HPA_allThyroid.csv  Pubmed_34663816.csv
dgscrna/core/: clustering.py
examples/: demo.ipynb
scanpy_dgscrna/: __init__.py  __main__.py  plotting.py  preprocessing.py  tools.py
scanpy_dgscrna.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
