[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgscrna"
version = "0.1.0"
description = "DGscRNA is a package for analyzing single-cell RNA-seq data."
authors = [
    { name = "Yimin Liu", email = "yiminliu.career@gmail.com" }
]
license = "GPL-3.0"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",

    "scanpy>=1.9.0",
    "anndata>=0.8.0",

    "scikit-learn>=1.0.0",
    "torch>=1.9.0",
    "torchmetrics>=0.7.0",

    "hdbscan>=0.8.0",
    "leidenalg>=0.8.0",

    "harmonypy>=0.0.5",

    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",

    "tqdm>=4.62.0",
    "joblib>=1.1.0",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["dgscrna*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
dgscrna = ["data/*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["dgscrna"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["dgscrna"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "pass",
] 