[project]
name = "dgscrna"
version = "0.1.0"
description = "DGscRNA is a package for analyzing single-cell RNA-seq data."
authors = [
    { name = "Yimin Liu", email = "yiminliu.career@gmail.com" }
]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",

    "scanpy>=1.9.0",
    "anndata>=0.8.0",

    "scikit-learn>=1.0.0",
    "torch>=1.9.0",
    "torchmetrics>=0.7.0",

    "hdbscan>=0.8.0",
    "leidenalg>=0.8.0",

    "harmonypy>=0.0.5",

    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",

    "tqdm>=4.62.0",
    "joblib>=1.1.0",
]